--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -9,7 +9,8 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg" />
+      <%= image_tag asset_path("thct.png"), class: "d-block w-100" %>
+<!--      <img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg" />-->
       <div class="carousel-caption">
         <h4>
           First Thumbnail label
@@ -20,7 +21,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" alt="Carousel Bootstrap Second" src="https://www.layoutit.com/img/sports-q-c-1600-500-2.jpg" />
+      <%= image_tag asset_path("thct2.png"), class: "d-block w-100" %>
       <div class="carousel-caption">
         <h4>
           Second Thumbnail label
