--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">The Heavenly Clean Team</a>
+  <a class="navbar-brand" href="#"><%= image_tag asset_path("thct-logo"), id: "logo" %>The Heavenly Clean Team</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -8,10 +8,9 @@
     <div>
       <%= link_to "Home", root_path, class: "btn thct-btn-dark" %>
       <%= link_to "About", root_path, class: "btn thct-btn-light" %>
+      <%= link_to "Services", root_path, class: "btn thct-btn-light" %>
       <%= link_to "Get a Quote!", root_path, class: "btn thct-btn-light" %>
     </div>
-
-
 
   </div>
 </nav>
