--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#"><%= image_tag asset_path("thct-logo"), id: "logo" %>The Heavenly Clean Team</a>
+  <%= image_tag asset_path("thct-logo"), id: "logo" %>
+  <a class="navbar-brand" href="<%= root_path %>", id="companyname"">The Heavenly Clean Team</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
