--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -13,10 +13,10 @@
 <!--      <img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg" />-->
       <div class="carousel-caption">
         <h4>
-          First Thumbnail label
+          Natural Clean
         </h4>
         <p>
-          Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+          All of the products we use to clean are natural and plant-based. They are safe for everyone in your home, including your pets!
         </p>
       </div>
     </div>
@@ -24,21 +24,21 @@
       <%= image_tag asset_path("thct2.png"), class: "d-block w-100" %>
       <div class="carousel-caption">
         <h4>
-          Second Thumbnail label
+          Satisfaction Guarantee
         </h4>
         <p>
-          Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+          We will not rest until we are able to provide you with the best cleaning service in the city!
         </p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" alt="Carousel Bootstrap Third" src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg" />
+      <%= image_tag asset_path("thct3.jpeg"), class: "d-block w-100" %>
       <div class="carousel-caption">
         <h4>
-          Third Thumbnail label
+          Our Team
         </h4>
         <p>
-          Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+          We are bonded and insured and all our employees receive health insurance and a living wage.
         </p>
       </div>
     </div>
