add info_card helper

--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -1,1 +1,10 @@
+<section class="sponsors">
+  <%= image_tag asset_path("sponsor1.png") %>
+  <%= image_tag asset_path("sponsor3.png") %>
+  <%= image_tag asset_path("sponsor4.png") %>
 
+</section>
+<section class="services">
+  <%= info_card("Title1", "https://materializecss.com/images/sample-1.jpg", "This is a description") %>
+
+</section>
