--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,9 +27,49 @@ $secondary: #5200B9;
 
 .carousel-inner {
   img{
-    height: 300px;
+    height: 400px;
     width: 500px;
 
+  }
+}
+
+.sponsors {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  background: #ffccff;
+
+  img {
+    display: inline-block;
+    height: 70px;
+    width: auto;
+  }
+}
+
+.services {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+  background: $secondary;
+
+  .card {
+    display: inline-block;
+    margin: 10px;
+    height: 400px;
+    width: 300px;
+
+    .card-content {
+      padding: 5px;
+      text-align: center;
+    }
+
+    img {
+      height: auto;
+      width: 100%;
+    }
   }
 }
 
@@ -53,14 +93,36 @@ $secondary: #5200B9;
   font-family: 'Caveat Bush', cursive;
 }
 
+@media only screen and (max-width : 1200px) {
+  .carousel-inner img {
+    height: auto;
+    width: auto;
+  }
+}
+
 @media (max-width: 768px) {
   .carousel-caption h4 {
     display: none;
   }
+
+  .sponsors {
+    display: block;
+    height: 350px;
+
+    img {
+      display: block;
+      margin: 0 auto;
+      padding-top: 10px;
+    }
+  }
+
 }
 
 @media (max-width: 480px) {
   #companyname, .carousel-caption {
     display: none;
   }
+
+
+
 }
