--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -5,6 +5,21 @@
 
 </section>
 <section class="services">
-  <%= info_card("Title1", "https://materializecss.com/images/sample-1.jpg", "This is a description") %>
+  <%= info_card(
+          "Partial House Cleaning",
+          asset_path("card3.jpg"),
+          "From Bathrooms, Bedrooms and Closets, to the Living Room and Kitchen.
+          We offer Room-by-room cleaning at a single flat rate."
+      ) %>
+  <%= info_card(
+          "Deep Cleaning",
+          asset_path("card2.jpg"),
+          "Need EVERYTHING cleaned and organized? Our deep cleaning service covers all rooms and the exterior windows/drive way."
+      ) %>
+  <%= info_card(
+          "Move In/Out Cleaning",
+          asset_path("card1.jpg"),
+          "Bought your dream home?  Off to college? We've got you covered. Deep cleaning for all rooms with optional junk disposal."
+      ) %>
 
 </section>
