--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <script src="https://use.fontawesome.com/be817df446.js"></script>
   </head>
 
   <body>
@@ -18,7 +20,9 @@
       </div>
     </div>
     <%= yield %>
+    <%= render 'shared/footer' %>
   </section>
+
     <%= js add_gritter(flash[:notice], title: "Timesheets App Notification", sticky: false, image: :notice) %>
   </body>
 </html>
