write working prototype code for quote system

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,8 @@
 
 @import "material";
 @import "gritter";
-@import "https://fonts.googleapis.com/icon?family=Material+Icons";
-@import "https://fonts.googleapis.com/css?family=Caveat+Bush";
+//@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+//@import "https://fonts.googleapis.com/css?family=Caveat+Bush";
 
 $primary: #d699ff;
 $secondary: #5200B9;
