--- a/app/views/statics/quote.html.erb
+++ b/app/views/statics/quote.html.erb
@@ -1,33 +1,54 @@
+<!--<section class="services-list">-->
+<!--  <div id="debug list">-->
+
+<!--    <ul>-->
+<!--      <li>Bedroom Cleaning, Rate: 30/room/hr <input type="checkbox" name="beds_check" id="beds_check" class="checkbox" /></li>-->
+<!--      <li>Bath Cleaning, Rate: 30/room/hr <input type="checkbox" name="baths_check" id="baths_check" class="checkbox" /></li>-->
+<!--      <li>Closet Cleaning, Rate: 15/room/hr <input type="checkbox" name="closets_check" id="closets_check" class="checkbox" /></li>-->
+<!--    </ul>-->
+<!--    Total: <span id="total">0</span>-->
+<!--  </div>-->
+<!--</section>-->
+
 <section class="services-list">
-  <div id="debug list">
-    <p>Beds: <input type="text" name="beds" id="beds_field" value="0"/></p>
-    <p>Baths: <input type="text" name="baths" id="baths_field"/></p>
-    <p>Closets: <input type="text" name="closets" id="closets_field"/></p>
-    <ul>
-      <li>Bedroom Cleaning, Rate: 30/room/hr <input type="checkbox" name="beds_check" id="beds_check" /></li>
-      <li>Bath Cleaning, Rate: 30/room/hr <input type="checkbox" name="baths_check" id="baths_check" /></li>
-      <li>Closet Cleaning, Rate: 15/room/hr <input type="checkbox" name="closets_check" id="closets_check" /></li>
-    </ul>
-    Total: <span id="total">0</span>
+
+  <div>
+    <p>Beds: <input type="text" name="beds" id="bedrooms_field" value="0"/></p>
+    <p>Baths: <input type="text" name="baths" id="bathrooms_field" value="0"/></p>
+    <p>Closets: <input type="text" name="closets" id="closets_field" value="0"/></p>
+    <h3>Services Test</h3>
+    <% @services.each do |service| %>
+      <p><%= service.name %>, Rate: <%= service.rate %> per hour/per room Add: <%= check_box_tag "#{service.name}_#{service.rate}" %></p>
+    <% end %>
   </div>
+
+
+
+
 </section>
 
 <script type="text/javascript">
   var total = 0;
   var services = {};
+
   $('input[type="checkbox"]').each(function() {
-      var service_name = $(this).attr('id');
-      services[service_name] = service_name;
+      var service = $(this).attr('name').split("_");
+      var service_name = service[0].toLowerCase();
+      var service_rate = parseInt(service[1]);
+      console.log(service_name, service_rate);
+      services[service_name] = service_rate;
   });
   console.log("Quotes loaded", services);
-  $("#beds_check").change(function() {
+  $(".checkbox").change(function() {
+      var field = $(this).attr('id').split("_").shift();
       if(this.checked) {
           console.log("Checked");
-          total += 30 * $("#beds_field").val();
+          console.log(field);
+          total += 30 * $("#" + field + "_field").val();
           $("#total").html(total);
       } else {
           console.log("Unchecked");
-          total -= 30 * $("#beds_field").val();
+          total -= 30 * $("#" + field + "_field").val();
           $("#total").html(total);
       }
   });
