add floating div for calculated quote

--- a/app/assets/stylesheets/quote.scss
+++ b/app/assets/stylesheets/quote.scss
@@ -11,3 +11,17 @@
 
 }
 
+#total-container {
+  position: fixed;
+  top: 75%;
+  right: 0;
+  background: #ffccff;
+  height: 100px;
+  width: 200px;
+  border-radius: 15%;
+
+  #total {
+    font-size: 32px;
+  }
+}
+
