config secret key

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,6 +74,12 @@ $white: #fff;
 
 .services-list {
   height: 1000px;
+  overflow: auto;
+  #services_page {
+    margin: 0 auto;
+    width: 85%;
+    color: #fff;
+  }
 }
 
 .services, .services-list, .about {
