--- a/app/views/admin/services/_form.html.erb
+++ b/app/views/admin/services/_form.html.erb
@@ -8,8 +8,23 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :display_name, class: "col-sm-2 control-label" %>
+    <%= f.text_field :display_name, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :rate, class: "col-sm-2 control-label" %>
     <%= f.text_field :rate, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :category, class: "col-sm-2 control-label" %>
+    <%= f.text_field :category, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :qty, class: "col-sm-2 control-label" %>
+    <%= f.text_field :qty, class: "form-control" %>
   </div>
 
   <%= f.submit 'Submit', class: 'btn btn-primary btn-block' %>
