--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,7 @@
     <div>
       <%= link_to "Home", root_path, class: "btn thct-btn-dark" %>
       <%= link_to "About", about_path, class: "btn thct-btn-light" %>
+      <%= link_to "Services", services_list_path, class: "btn thct-btn-light" %>
       <%= link_to "Get a Quote!", quote_path, class: "btn thct-btn-light" %>
     </div>
 
