add seed data to seeds.rb

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,7 @@
       <%= link_to "About", about_path, class: "btn thct-btn-light" %>
       <%= link_to "Services", services_list_path, class: "btn thct-btn-light" %>
       <%= link_to "Get a Quote!", quote_path, class: "btn thct-btn-light" %>
+      <%= link_to "Payments",  "http://heavenlycleanteam.ManageAndPayMyAccount.com", class: "btn thct-btn-light" %>
     </div>
 
   </div>
