--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,11 +7,11 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <div>
-      <%= link_to "Home", root_path, class: "btn thct-btn-dark" %>
-      <%= link_to "About", about_path, class: "btn thct-btn-light" %>
-      <%= link_to "Services", services_list_path, class: "btn thct-btn-light" %>
-      <%= link_to "Get a Quote!", quote_path, class: "btn thct-btn-light" %>
-      <%= link_to "Payments",  "http://heavenlycleanteam.ManageAndPayMyAccount.com", class: "btn thct-btn-light" %>
+      <%= nav_link("Home", root_path) %>
+      <%= nav_link("About", about_path) %>
+      <%= nav_link("Services", services_list_path) %>
+      <%= nav_link("Get a Quote!", quote_path) %>
+      <%= nav_link("Payments", "http://heavenlycleanteam.ManageAndPayMyAccount.com") %>
     </div>
 
   </div>
