--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "material";
 @import "gritter";
 @import "quote.scss";
+@import "admin.scss";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 //@import "https://fonts.googleapis.com/css?family=Caveat+Bush";
 
@@ -9,6 +10,10 @@ $primary: #d699ff;
 $secondary: #5200B9;
 $tertiary: #AB00B5;
 $white: #fff;
+
+body {
+  min-width: 400px;
+}
 
 .thct-btn-dark, .thct-btn-light {
   display: inline-block;
@@ -104,6 +109,14 @@ $white: #fff;
   }
 }
 
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+  background: $primary;
+}
+
 .footer {
   display: flex;
   justify-content: center;
@@ -167,6 +180,12 @@ $white: #fff;
         height: 200px;
         width: 100%;
       }
+    }
+  }
+
+  #navbarSupportedContent {
+    div a {
+      margin-top: 10px;
     }
   }
 }
