--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -44,3 +44,9 @@
     </div>
   </div> <a class="carousel-control-prev" href="#carousel-719992" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-719992" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
 </div>
+
+<script type="text/javascript">
+    $('.carousel').carousel({
+        interval: 5000
+    });
+</script>
