--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <div id="footer-contact">
       <h3>(773) 440-2020</h3>
       <hr />
-      customer.service@aheavenlyclean.com
+      customer.service@heavenlycleanteam.com
     </div>
     <hr />
     <div id="footer-nav">
@@ -18,6 +18,9 @@
       <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
       <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
       <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+    </div>
+    <div id="copyright">
+      Developed by Stormhelm Softworks
     </div>
   </div>
 
