--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
   <body>
   <section class="container">
+    <%= admin_nav %>
     <%= render 'shared/navbar' %>
     <div class="row" id="carousel">
       <div class="col-md-12">
