--- a/app/views/admin/services/index.html.erb
+++ b/app/views/admin/services/index.html.erb
@@ -1,26 +1,31 @@
-<h1>Services</h1>
-<table>
-  <thead>
-    <th>
-      Service Name
-    </th>
-    <th>
-      Service Rate
-    </th>
-    <th>
+<div class="content">
+  <div>
+    <h1>Services</h1>
+    <table>
+      <thead>
+      <th>
+        Service Name
+      </th>
+      <th>
+        Service Rate
+      </th>
+      <th>
 
-    </th>
-  </thead>
-  <tbody>
-  <% @services.each do |service| %>
-    <tr>
-      <td><%= service.name %></td>
-      <td>$<%= service.rate %></td>
-      <td>
-        <span class="table-options"><%= link_to "Edit", edit_admin_service_path(service), id: "edit_#{service.id}" %></span>
-        <span class="table-options"><%= link_to "Delete", admin_service_path(service), method: :delete, id: "delete_#{service.id}" %></span>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+      </th>
+      </thead>
+      <tbody>
+      <% @services.each do |service| %>
+        <tr>
+          <td><%= service.display_name %></td>
+          <td>$<%= service.rate %></td>
+          <td>
+            <span class="table-options"><%= link_to "Edit", edit_admin_service_path(service), id: "edit_#{service.id}" %></span>
+            <span class="table-options"><%= link_to "Delete", admin_service_path(service), method: :delete, id: "delete_#{service.id}" %></span>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+
+  </div>
+</div>
