add animate.css and add fadein-out animation to quote form, fix webpage title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Heavenlycleanteam</title>
+    <title>The Heavenly Clean Team</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -24,6 +24,6 @@
     <%= render 'shared/footer' %>
   </section>
 
-    <%= js add_gritter(flash[:notice], title: "Timesheets App Notification", sticky: false, image: :notice) %>
+    <%= js add_gritter(flash[:notice], title: "Heavenly Clean Team", sticky: false) %>
   </body>
 </html>
