--- a/app/views/admin/services/index.html.erb
+++ b/app/views/admin/services/index.html.erb
@@ -1,7 +1,7 @@
 <div class="content">
-  <div>
-    <h1>Services</h1>
-    <table>
+  <div id="admin_services-list">
+    <h3>Services Admin <%= link_to "New", new_admin_service_path, class: "btn btn-primary" %></h3>
+    <table class="table">
       <thead>
       <th>
         Service Name
