--- a/app/views/statics/about.html.erb
+++ b/app/views/statics/about.html.erb
@@ -6,7 +6,11 @@
       We are professional and dependable, paying total attention to detail. We are fully customizable so that we can meet the individual needs of our diverse customers.
       We use eco-friendly products which are good for you, good for us and great for the environment.</p>
 
-    <img src="https://via.placeholder.com/500x350" />
+    <div id="about_us_picture">
+      <%= image_tag asset_path("about_us_pic") %>
+      <br/>
+      <small>At Service Autopilot In-House training.</small>
+    </div>
 
     <h4>Mission Statement</h4>
     <p>At the Heavenly Clean Team,
