--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,9 +15,9 @@
     </div>
     <hr />
     <div id="footer-social">
-      <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
-      <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
-      <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+
+      <a href="https://twitter.com/heavenly_team"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+      <a href="https://web.stagram.com/heavenlycleanteam"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
     </div>
     <div id="copyright">
       Developed by Stormhelm Softworks
