--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -9,8 +9,8 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag asset_path("thct.png"), class: "d-block w-100" %>
-<!--      <img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg" />-->
+      <%#= image_tag asset_path("thct.png"), class: "d-block w-100" %>
+      <div class="img" id="car-img-1"></div>
       <div class="carousel-caption">
         <h4>
           Natural Clean
@@ -21,7 +21,8 @@
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag asset_path("thct2.png"), class: "d-block w-100" %>
+      <%#= image_tag asset_path("thct2.png"), class: "d-block w-100" %>
+      <div class="img" id="car-img-2"></div>
       <div class="carousel-caption">
         <h4>
           Satisfaction Guarantee
@@ -32,7 +33,8 @@
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag asset_path("thct3.jpeg"), class: "d-block w-100" %>
+      <%#= image_tag asset_path("thct3.jpeg"), class: "d-block w-100" %>
+      <div class="img" id="car-img-3"></div>
       <div class="carousel-caption">
         <h4>
           Our Team
